fix: bugfix container overflow

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 500px) {
   .profile__info {
-    max-width: 250px;
+    max-width: 225px;
     margin: 26px auto 34px;
     text-align: center;
   }
